_sass/components/full-image.sass
.full-image
  margin: 2em -200px 2em -128px
  background: $ecru

  > img
    width: 100%
    display: block
    border: solid 16px white

  @media (max-width: 769px)
    margin: 2em -16px

    > img
      border: 0

    &.-cropped
      height: 200px
      overflow: hidden

